WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302881
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-block-in-inline-end-002.html -003.html -004.html
https://bugs.webkit.org/show_bug.cgi?id=302881
Summary
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-inline/text-bo...
alan
Reported
2025-11-20 11:20:13 PST
ssia
Attachments
Patch
(10.57 KB, patch)
2025-11-20 11:26 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(11.28 KB, patch)
2025-11-20 13:35 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-11-20 11:26:11 PST
Created
attachment 477454
[details]
Patch
alan
Comment 2
2025-11-20 13:35:21 PST
Created
attachment 477455
[details]
[fast-cq]Patch
Ahmad Saleem
Comment 3
2025-11-20 17:25:35 PST
***
Bug 302835
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2025-11-20 19:09:44 PST
Committed
303371@main
(30eb0d2436fd): <
https://commits.webkit.org/303371@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477455
[details]
.
Radar WebKit Bug Importer
Comment 5
2025-11-20 19:10:13 PST
<
rdar://problem/165178913
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug